fixed layout bug with 327 width at payment page

--- a/src/app/payment-page/address-display/address-display.component.css
+++ b/src/app/payment-page/address-display/address-display.component.css
@@ -13,9 +13,7 @@ h2 {
 
 .address-container {
     text-align: center;
-    width: 80%;
     padding: 0;
-    margin-left: 10%;
     margin-top: 30px;
     border: 2px solid darkred;
     border-top: 0px;
@@ -49,9 +47,7 @@ h6 {
 .row-phone {
     flex-direction: column; 
     text-align: center; 
-    width: 80%; 
-    margin-top: 10px; 
-    margin-left: 10%;
+    margin-top: 10px;
 }
 
 @media only screen and (max-width: 524px) {
