--- a/src/app/payment-page/payment/payment.component.css
+++ b/src/app/payment-page/payment/payment.component.css
@@ -50,7 +50,6 @@ img {
 }
 
 .card-data {
-    min-width: 400px;
     justify-content: center;
 }
 
